[package]
name = "signet"
version = "0.1.0"
edition = "2021"
# 1.87: usize::is_multiple_of (used in config.rs key-bits validation) was
# stabilized in 1.87. The codebase already relies on it, so this is the true
# minimum supported version.
rust-version = "1.87"
description = "Hardened partially-blind RSA signing service for FreedInk vote tokens"
license = "MIT"
publish = false

[lib]
name = "signet"
path = "src/lib.rs"

[[bin]]
name = "signet"
path = "src/main.rs"

[dependencies]
# Crypto: partially-blind RSA with public metadata (RFC 9474 + draft-amjad-cfrg-partially-blind-rsa).
# Interop-proven against @cloudflare/blindrsa-ts RSAPBSSA.SHA384.PSS.Randomized.
blind-rsa-signatures = "=0.17.2"

# PRF surface (disjoint from the blind-RSA surface): RFC 9497 VOPRF, mode 0x01,
# ciphersuite ristretto255-SHA512 (curve25519-dalek backend). Interop-proven
# against @cloudflare/voprf-ts (see interop/prf.mjs). Crypto deps pinned exact.
voprf = { version = "=0.5.0", default-features = false, features = ["ristretto255-ciphersuite", "std"] }
# Nullifier key schedule (HKDF-SHA512) and stage-2 / pairwise HMAC-SHA256.
hkdf = "=0.12.4"
hmac = "=0.12.1"
sha2 = "=0.10.9"
# rand_core 0.6 OsRng for voprf's blind_evaluate: voprf 0.5 consumes rand_core
# 0.6 RNG traits, which the crate's own `rand` 0.9 (rand_core 0.9) does not
# implement.
rand_core = { version = "=0.6.4", features = ["getrandom"] }
# Constant-time owner-handle comparison on the dedup ledger (already in-tree
# via curve25519-dalek; same version, pinned exact).
subtle = "=2.6.1"

# HTTP + TLS
axum = { version = "0.8", default-features = false, features = ["json", "tokio", "http1", "query"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time"] }
tower = { version = "0.5", features = ["limit"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging"] }
# Used by the custom identity-pinning Accept layer to terminate TLS and read the
# verified peer leaf. default-features=false matches axum-server: the ring crypto
# provider is installed explicitly in main.rs.
tokio-rustls = { version = "0.26", default-features = false }
rustls-pemfile = "2"
x509-parser = "0.18"

# Storage
rusqlite = { version = "0.37", features = ["bundled"] }

# Key-at-rest encryption
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive"] }

# Encoding / serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"

# Randomness for the data-encryption key nonces
rand = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-manual-roots"] }
tempfile = "3"
rcgen = "0.13"
# `danger` exposes deterministic_blind_unchecked, needed ONLY to drive the
# RFC 9497 Appendix A test vectors (fixed blinds). Dev-only: the release
# binary is built without dev-dependency feature unification.
voprf = { version = "=0.5.0", default-features = false, features = ["ristretto255-ciphersuite", "std", "danger"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
